--- a/public/mm/index.html
+++ b/public/mm/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>乐淘淘</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="assets/mui/css/mui.min.css">
 	<link rel="stylesheet" href="css/base.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header class="mui-bar mui-bar-nav my-header">
-		<h1 class="mui-title">乐淘云购</h1>
+		<h1 class="mui-title">乐淘淘购物</h1>
 		<a href="" class="mui-icon mui-icon-search mui-pull-right"></a>
 	</header>
 	<nav class="mui-bar mui-bar-tab my-footer">
@@ -49,164 +49,160 @@
 					<div class="mui-indicator"></div>
 					<div class="mui-indicator"></div>
 					<div class="mui-indicator"></div>
-				</div>
+				</div>		
 			</div>
 		</div>
 		<!-- /导航链接 -->
-		<div class="nav-links"> 
-			<a href="javascript:;"><img src="images/nav1.png" alt=""></a>
-			<a href="javascript:;"><img src="images/nav2.png" alt=""></a>
-			<a href="javascript:;"><img src="images/nav3.png" alt=""></a>
-			<a href="javascript:;"><img src="images/nav4.png" alt=""></a>
-			<a href="javascript:;"><img src="images/nav5.png" alt=""></a>
-			<a href="javascript:;"><img src="images/nav6.png" alt=""></a>
+		<div class="nav-links">
+			<a href="#"><img src="images/nav1.png" alt=""></a>
+			<a href="#"><img src="images/nav2.png" alt=""></a>
+			<a href="#"><img src="images/nav3.png" alt=""></a>
+			<a href="#"><img src="images/nav4.png" alt=""></a>
+			<a href="#"><img src="images/nav5.png" alt=""></a>
+			<a href="#"><img src="images/nav6.png" alt=""></a>
 		</div>
 
 		<!-- 品牌专区 -->
 		<div class="brand">
-				<img src="images/title0.png" class="title">
-				<ul>
-					<li><a href=""><img src="images/brand1.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand2.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand3.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand4.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand5.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand6.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand7.png" alt=""></a></li>
-					<li><a href=""><img src="images/brand8.png" alt=""></a></li>
-				</ul>
+			<img src="images/title0.png" class="title">
+			<ul>
+				<li><a href="#"><img src="images/brand1.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand2.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand3.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand4.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand5.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand6.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand7.png" alt=""></a></li>
+				<li><a href="#"><img src="images/brand8.png" alt=""></a></li>
+			</ul>
 		</div>
 		<!-- /运动生活专区 -->
 		<div class="product">
-				<img src="images/title1.png" class="title">
-				<ul>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-				</ul>
-
+			<img src="images/title1.png" class="title">
+			<ul>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+					<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+					<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+				<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+				<span class="buy-now">立即购买</span></a></li>
+			</ul>
 		</div>
-
 		<!-- 女士专栏 -->
 		<div class="product">
-				<img src="images/title2.png" class="title">
-				<ul>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-				</ul>
-
+			<img src="images/title2.png" class="title">
+			<ul>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+					<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+					<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+				<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+				<span class="buy-now">立即购买</span></a></li>
+			</ul>
 		</div>
 		<!-- /女士专栏 -->
 
 		<!-- 男士专栏 -->
 		<div class="product">
-				<img src="images/title3.png" class="title">
-				<ul>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-					<li><a href="#"><img src="images/product.jpg" alt="">
-					<span class="name">
-							adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-						</span>
-						<p>
-							<span>¥560</span>
-							<span>¥888</span>
-						</p>
-						<span class="buy-now">立即购买</span></a></li>
-				</ul>
-
+			<img src="images/title3.png" class="title">
+			<ul>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+					<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+					<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+				<span class="buy-now">立即购买</span></a></li>
+				<li><a href="#"><img src="images/product.jpg" alt="">
+				<span class="name">
+						adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+					</span>
+					<p>
+						<span>¥560</span>
+						<span>¥888</span>
+					</p>
+				<span class="buy-now">立即购买</span></a></li>
+			</ul>
 		</div>
 		<!-- /男士专栏 -->
 	</div>
